--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,22 @@
 html,
 body {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ccc;
 }
 
 #root {
-  height: 100%;
+  /* height: 100%; */
+  /* width: 300px; */
+  /* height: 250px; */
+
   display: flex;
   flex-direction: column;
+
+  /* padding: 0 5px; */
+  background-color: white;
 }
 
 body {
